// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`portfolioInfo tests PortfolioInfo renders correctly 1`] = `
<TouchableText
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  forwardedRef={null}
>
  Error! 
   
</TouchableText>
`;

exports[`portfolioInfo tests PortfolioInfo renders correctly with error 1`] = `
<TouchableText
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  forwardedRef={null}
>
  Error! 
  Network connection failed 
   
</TouchableText>
`;

exports[`portfolioInfo tests PortfolioInfo renders correctly with portfolio and stocks 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;
